...
    func randomMission(region: String) -> String {
        

        var dictionary: [String: Int] = [:]
        
        switch region {
        case "Terminus" :
            dictionary = [
                "Blockade a location" : 3,
                "Break a blockade" : 3,
                "Collect a resource" : 3,
                "Command others" : 2,
                "Conduct diplomacy" : 3,
...
