...
                                person.hiddenClock = true
                                campaign.writeToFile()
                            } label: {
                                Text("Add Clock")
                            }
                        } label: {
                            Text("Add")
                        }
                        Button {
                            buffer.personBuffer.insert(Person(id: person.id, name: person.name, subName: person.subName, hiddenDescription: person.hiddenDescription, description: person.description, hiddenFirstLook: person.hiddenFirstLook, firstLook: person.firstLook, hiddenDisposition: person.hiddenDisposition, disposition: person.disposition, hiddenRole: person.hiddenRole, role: person.role, hid
                            person.name = "toDelate"
                            self.mode.wrappedValue.dismiss()
                            campaign.writeToFile()
...
